--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-title: Natura Himalayas
+title: Natural History by Dr. Aaratrik Pal
+description: About natural history, nomenclature and taxonomy
+author: Dr. Aaratrik Pal
